# always-on-agent

./: .env.example  .gitignore  Dockerfile  pyproject.toml
agent/: README.md  __init__.py  action_tools.py  cli.py  config.py  core.py  memory.py  observability.py  prompts.py  slack_interactive.py  tools.py  webhook.py
demo/: compliance-policy.md
demo/contracts/: contoso-cloud.md
demo/deploys/: recent.json
demo/issues/: DEMO-101.json  DEMO-102.json
demo/runbooks/: checkout-degraded.md
evals/: README.md  __init__.py  ab.py  golden.json  run_eval.py  score.py
metrics/: recent.json
platform/: README.md  agent.yaml  setup.sh  trigger.py
scripts/: demo.sh
tests/: test_action_tools.py  test_evals.py  test_memory.py  test_observability.py  test_slack_interactive.py
