[project]
name = "always-on-ops-agent"
version = "0.1.0"
description = "Always-On Ops Agent: scheduled/webhook-triggered incident triage and compliance-drift scanning, built on the Claude Agent SDK."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Managed Agents trigger (platform/trigger.py). Needs a version with the
    # client.beta.agents / client.beta.sessions surface.
    "anthropic>=0.69",
]

[project.scripts]
ops-agent = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
